fix: ui(z-index)

--- a/src/app/styles/effects/floatingOptions.module.css
+++ b/src/app/styles/effects/floatingOptions.module.css
@@ -4,6 +4,7 @@
   inset: 0 0 0 0;
   transition: background-color 5s ease;
   animation: fadeIn 0.5s ease forwards;
+  z-index: 90;
 }
 
 @keyframes fadeIn {
@@ -23,6 +24,7 @@
   bottom: 1dvh;
   left: 1dvh;
   transition: all 0.4s ease;
+  z-index: 91;
 }
 
 .navButton {
@@ -98,7 +100,7 @@
   text-wrap: nowrap;
 }
 
-.options button:nth-child(4){
+.options button:nth-last-child(1){
   width: 50px;
   height: 50px;
   border-radius: 50%;
